# wayther

./: .gitignore  README.md  default.nix  package.yaml  shell.nix  wayther.cabal
app/: Main.hs
src/: Api.hs  Config.hs  LocalConfig.hs  Weather.hs
src/Weather/: Data.hs
