cabal-version:      2.4
name:               wayther
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Barnaby Hutchins
maintainer:         bhutchins@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Config
    Api
    Weather
    Weather.Data
  hs-source-dirs:
    src
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    RecordWildCards
  build-depends:
    base               ^>=4.14.3.0,
    aeson              ^>=1.5.6.0,
    http-conduit,
    bytestring,
    text,
    containers,
    mr-env,
    errors

executable wayther
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
      OverloadedStrings
      DeriveGeneric
      DeriveAnyClass
      RecordWildCards
    build-depends:
        base               ^>=4.14.3.0,
        aeson              ^>=1.5.6.0,
        http-conduit,
        bytestring,
        text,
        containers,
        mr-env,
        errors,
        wayther
    hs-source-dirs:   app
    default-language: Haskell2010
